fixing default party validation
